# kinnector-agent

./: Cargo.toml  README.md  build.rs
.git-history/: FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
.git-history/logs/refs/heads/: main
.git-history/logs/refs/remotes/origin/: HEAD  main
.git-history/objects/pack/: pack-e01c8c83df2f20f2df220e5a0ffe8b411f159c08.idx  pack-e01c8c83df2f20f2df220e5a0ffe8b411f159c08.pack  pack-e01c8c83df2f20f2df220e5a0ffe8b411f159c08.rev
.git-history/refs/original/refs/heads/: main
.git-history/refs/remotes/origin/: main
scripts/: clean_unix.py  fix_libc.py  fix_unaligned.py  fix_unix2.py  recover.py  remove_temp_checks.py
src/: clipboard_helper.rs  control.rs  ffi.rs  heuristics.rs  ipc.rs  lib.rs  main.rs  os_utils.rs  sigma_engine.rs  trust_cache.rs  tty_listener.rs  types.rs  yara_scanner.rs
