[package]
name = "antitheft-agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "antitheft_agent"
path = "src/lib.rs"

[[bin]]
name = "antitheft-agent"
path = "src/main.rs"

[[bin]]
name = "antitheft-clipboard-helper"
path = "src/clipboard_helper.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
kinnector-config = { path = "../kinnector-config" }
notify = "6.1.1"
tracing = "0.1"
yara-x = "1.19.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_RemoteDesktop",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_System_Environment",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Graphics_Gdi"
] }
